--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
+   "manifest_version": 2,
    "name": "SiteBlock",
-   "version": "0.2.2",
+   "version": "0.2.3",
    "description": "Block sites to discourage procrastination",
    "options_page": "options.html",
-   "background_page": "background.html",
+   "background" : {
+       "page": "background.html" 
+   }, 
    "permissions": [ 
       "tabs"
    ]
