Switch to manifest v3
Move to using chrome.storage.local from localStorage.
Use an offscreen page to retrieve the old localStorage.

Move to using alarms for the periodic checks of tab usage.

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
-   "manifest_version": 2,
+   "manifest_version": 3,
    "name": "SiteBlock",
-   "version": "0.2.4",
+   "version": "0.2.5",
    "description": "Block sites to discourage procrastination",
    "options_page": "html/options.html",
-   "background" : {
-       "page": "html/background.html"
+   "background": {
+      "service_worker": "js/background.js",
+      "type": "module"
    },
    "permissions": [
+      "alarms",
+      "offscreen",
+      "storage",
       "tabs"
    ]
 }
